tests/tc/neg/union01.js

/*@ foo0 :: ((int|boolean)) => int */
function foo0(x) {
  return x;
}

